fix the error with coloring. can now technically play a full game of checkers. no double jump, no king and no recognition whether or not someone has won.

--- a/application.css
+++ b/application.css
@@ -30,3 +30,7 @@ td {
 .kinged {
   border: .3em solid grey;
 }
+
+.potential {
+  background-color: green;
+}
